k8s/kong/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingres-kong
  labels:
    name: ingress-kong
spec:
  rules:
  - host: eder.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kong-service
            port:
              number: 8000
